--- a/ShopCs/ShopCs.csproj
+++ b/ShopCs/ShopCs.csproj
@@ -124,20 +124,19 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Cart.aspx" />
-    <Content Include="Cart.css" />
-    <Content Include="Details.css" />
+    <Content Include="View\Pages\Cart.aspx" />
+    <Content Include="Style\Cart.css" />
+    <Content Include="Style\Details.css" />
     <Content Include="Image\logoVill.png" />
     <Content Include="Image\Logo\LogoAo.png" />
     <Content Include="index.aspx" />
-    <Content Include="Login.aspx" />
-    <Content Include="Login.css" />
-    <Content Include="Login1.aspx" />
-    <Content Include="ProductDetail.aspx" />
-    <Content Include="ResetPassword.aspx" />
-    <Content Include="Signup.aspx" />
-    <Content Include="Signup.css" />
-    <Content Include="style.css" />
+    <Content Include="View\Pages\Login.aspx" />
+    <Content Include="Style\Login.css" />
+    <Content Include="View\Pages\ProductDetail.aspx" />
+    <Content Include="View\Pages\ResetPassword.aspx" />
+    <Content Include="View\Pages\Signup.aspx" />
+    <Content Include="Style\Signup.css" />
+    <Content Include="Style\style.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -146,11 +145,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Data.dbml</DependentUpon>
     </Compile>
-    <Compile Include="Cart.aspx.cs">
+    <Compile Include="View\Pages\Cart.aspx.cs">
       <DependentUpon>Cart.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Cart.aspx.designer.cs">
+    <Compile Include="View\Pages\Cart.aspx.designer.cs">
       <DependentUpon>Cart.aspx</DependentUpon>
     </Compile>
     <Compile Include="index.aspx.cs">
@@ -167,40 +166,33 @@
     <Compile Include="index.Master.designer.cs">
       <DependentUpon>index.Master</DependentUpon>
     </Compile>
-    <Compile Include="Login.aspx.cs">
+    <Compile Include="View\Pages\Login.aspx.cs">
       <DependentUpon>Login.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Login.aspx.designer.cs">
+    <Compile Include="View\Pages\Login.aspx.designer.cs">
       <DependentUpon>Login.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Login1.aspx.cs">
-      <DependentUpon>Login1.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Login1.aspx.designer.cs">
-      <DependentUpon>Login1.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="ProductDetail.aspx.cs">
+    <Compile Include="View\Pages\ProductDetail.aspx.cs">
       <DependentUpon>ProductDetail.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="ProductDetail.aspx.designer.cs">
+    <Compile Include="View\Pages\ProductDetail.aspx.designer.cs">
       <DependentUpon>ProductDetail.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ResetPassword.aspx.cs">
+    <Compile Include="View\Pages\ResetPassword.aspx.cs">
       <DependentUpon>ResetPassword.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="ResetPassword.aspx.designer.cs">
+    <Compile Include="View\Pages\ResetPassword.aspx.designer.cs">
       <DependentUpon>ResetPassword.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Signup.aspx.cs">
+    <Compile Include="View\Pages\Signup.aspx.cs">
       <DependentUpon>Signup.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Signup.aspx.designer.cs">
+    <Compile Include="View\Pages\Signup.aspx.designer.cs">
       <DependentUpon>Signup.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
